Iron hatch improvements